[project]
name = "tiny-tls-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sosuts", email = "sosuke.utsunomiya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.6",
    "pydantic>=2.11.7",
]

[project.scripts]
tiny-tls-py = "tiny_tls_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "rich>=14.1.0",
    "ty>=0.0.1a18",
]
